--- a/public/interactionScreen/style.css
+++ b/public/interactionScreen/style.css
@@ -85,10 +85,21 @@ video{
     font-size: 12px;
     padding: 10px;
     box-shadow: 0 5px 10px black;
-
 }
-
-#btnInteragir:active{
+#btnCalibrar{
+    position: absolute;
+    z-index: 10;
+    right: 0%;
+    top: 85%;
+    transform: translate(-50%,-50%);
+    color: white;
+    background-color: rgb(40, 150, 26);
+    border-radius: 20px 10px 10px 20px;
+    font-size: 12px;
+    padding: 8px;
+    box-shadow: 0 5px 10px black;
+}
+#btnInteragir:active, #btnCalibrar:active{
     background-color: rgb(39, 126, 83);
     box-shadow: inset 0 5px 10px black;
 }
@@ -113,5 +124,16 @@ video{
         transform: translate(-50%, 0);
         text-align: center;
         border-radius: 10px 10px 20px 20px;
+    }
+    #btnCalibrar{
+        left: 0;
+        right: auto;
+        bottom: 5%;
+        top:auto;
+        padding: 5px;
+        padding-top: 1px;
+        padding-bottom: 1px;
+        border-radius: 10px;
+        transform: translate(0%, 50%);
     }
 }
